--- a/index.html
+++ b/index.html
@@ -1,224 +1,132 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Catch the Emojis Game</title>
+  <meta charset="UTF-8">
+  <title>Catch Game</title>
   <style>
-    body {
-      margin: 0;
-      overflow: hidden;
-      font-family: sans-serif;
-      transition: background-color 1s;
-    }
-    canvas {
-      display: block;
-      background-color: #d0f0fd;
-    }
-    #scoreBoard {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      color: #000;
-      font-size: 24px;
-      font-weight: bold;
-      z-index: 10;
-      background: rgba(255, 255, 255, 0.7);
-      padding: 6px 12px;
-      border-radius: 8px;
-    }
-    #gameOver {
+    body { margin: 0; overflow: hidden; background: #222; }
+    canvas { display: block; background: #000; margin: auto; }
+    #gameOver, #buttons {
       position: absolute;
       top: 40%;
       left: 50%;
-      transform: translate(-50%, -50%);
-      font-size: 48px;
-      color: red;
-      display: none;
+      transform: translateX(-50%);
+      text-align: center;
+      color: white;
+      font-size: 30px;
       z-index: 20;
-      background: rgba(255,255,255,0.9);
-      padding: 20px 40px;
-      border-radius: 12px;
-      font-weight: bold;
-      user-select: none;
+    }
+    button {
+      margin: 10px;
+      padding: 10px 20px;
+      font-size: 18px;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <div id="scoreBoard">Score: 0</div>
-  <div id="gameOver">💣 Game Over</div>
-  <canvas id="gameCanvas"></canvas>
+  <canvas id="gameCanvas" width="400" height="600"></canvas>
+  <div id="gameOver" style="display:none;">Game Over</div>
+  <div id="buttons" style="display:none;">
+    <button onclick="restartGame()">🔁 Try Again</button>
+    <button onclick="window.location.href='https://t.me/earnwithtelegram_bot?start=watchagain'">📺 Watch Ad to Continue</button>
+  </div>
 
   <script>
     const canvas = document.getElementById("gameCanvas");
     const ctx = canvas.getContext("2d");
-    const scoreBoard = document.getElementById("scoreBoard");
-    const gameOverDiv = document.getElementById("gameOver");
 
-    let width, height;
-    function resize() {
-      width = window.innerWidth;
-      height = window.innerHeight;
-      canvas.width = width;
-      canvas.height = height;
-      basket.y = height - basket.height - 10;
-    }
-    window.addEventListener("resize", resize);
-
-    // Player basket
-    const basket = {
-      x: 0,
-      y: 0,
-      width: 100,
-      height: 80,
-      emoji: "🧺",
-    };
-
-    // Objects that fall
+    let player = { x: 175, y: 580, width: 50, height: 10 };
     let fallingObjects = [];
-
-    // Game state
     let score = 0;
-    let gameOver = false;
-
-    // Speed and spawn rate
     let fallSpeed = 2;
     let spawnIntervalMs = 2000;
-    let spawnIntervalId;
+    let gameOver = false;
 
-    // Background colors
-    const bgColors = ["#d0f0fd", "#ffe4b5", "#e6ffe6", "#fff0f5", "#f0e68c"];
-    let bgIndex = 0;
-
-    // Object types and counts for weighted spawn
-    const objectTypes = [
-      { emoji: "🍎", points: 1, count: 3 },      // Apple
-      { emoji: "⚽", points: 2, count: 2 },      // Football
-      { emoji: "💎", points: 3, count: 1 },      // Diamond
-      { emoji: "🔪", points: -2, count: 2 },     // Knife
-      { emoji: "💀", points: -3, count: 1 },     // Skull
-      { emoji: "💣", points: "gameover", count:1 } // Bomb
-    ];
-
-    // Initialize
-    resize();
-    basket.x = width / 2 - basket.width / 2;
-
-    // Function to create objects with weighted chances
-    function createObject() {
-      const pool = [];
-      objectTypes.forEach(obj => {
-        for(let i=0; i < obj.count; i++) {
-          pool.push(obj);
-        }
-      });
-      const chosen = pool[Math.floor(Math.random() * pool.length)];
-      fallingObjects.push({
-        x: Math.random() * (width - 40),
-        y: -40,
-        size: 40,
-        emoji: chosen.emoji,
-        points: chosen.points
-      });
+    function drawPlayer() {
+      ctx.fillStyle = "lime";
+      ctx.fillRect(player.x, player.y, player.width, player.height);
     }
 
-    // Start spawning objects with current spawn interval
-    function startSpawning() {
-      if(spawnIntervalId) clearInterval(spawnIntervalId);
-      spawnIntervalId = setInterval(createObject, spawnIntervalMs);
-    }
-    startSpawning();
-
-    // Background color changer every 60 seconds
-    setInterval(() => {
-      bgIndex = (bgIndex + 1) % bgColors.length;
-      document.body.style.backgroundColor = bgColors[bgIndex];
-    }, 60000);
-
-    // Increase speed and spawn rate every 30 seconds
-    setInterval(() => {
-      fallSpeed *= 2;
-      spawnIntervalMs = Math.max(300, spawnIntervalMs / 2);
-      startSpawning();
-    }, 30000);
-
-    // Draw basket
-    function drawBasket() {
-      ctx.font = "60px serif";
-      ctx.textAlign = "center";
-      ctx.textBaseline = "top";
-      ctx.fillText(basket.emoji, basket.x + basket.width/2, basket.y);
-    }
-
-    // Draw all objects
-    function drawObjects() {
-      ctx.font = "40px serif";
-      ctx.textAlign = "left";
-      ctx.textBaseline = "top";
+    function drawFallingObjects() {
+      ctx.fillStyle = "red";
       fallingObjects.forEach(obj => {
-        ctx.fillText(obj.emoji, obj.x, obj.y);
+        ctx.beginPath();
+        ctx.arc(obj.x, obj.y, obj.radius, 0, Math.PI * 2);
+        ctx.fill();
       });
     }
 
-    // Update object positions and check collisions
-    function updateObjects() {
-      for(let i=fallingObjects.length - 1; i >= 0; i--) {
-        let obj = fallingObjects[i];
-        obj.y += fallSpeed;
-
-        // Collision detection (with some leniency)
+    function updateFallingObjects() {
+      fallingObjects.forEach(obj => obj.y += fallSpeed);
+      fallingObjects = fallingObjects.filter(obj => {
         if (
-          obj.y + obj.size > basket.y + 10 &&   // slightly above basket top
-          obj.y < basket.y + basket.height &&
-          obj.x + obj.size > basket.x + 10 &&   // slightly inside basket left
-          obj.x < basket.x + basket.width - 10
+          obj.y + obj.radius > player.y &&
+          obj.x > player.x &&
+          obj.x < player.x + player.width
         ) {
-          if(obj.points === "gameover") {
-            gameOver = true;
-            gameOverDiv.style.display = "block";
-          } else {
-            score += obj.points;
-            if(score < 0) score = 0;
-            scoreBoard.textContent = `Score: ${score}`;
-          }
-          fallingObjects.splice(i, 1);
-          continue;
+          score++;
+          fallSpeed += 0.05;
+          spawnIntervalMs = Math.max(500, spawnIntervalMs - 20);
+          document.title = `Score: ${score}`;
+          return false;
         }
-
-        // Remove objects that fell below screen
-        if(obj.y > height) {
-          fallingObjects.splice(i, 1);
+        if (obj.y > canvas.height) {
+          gameOverHandler();
+          return false;
         }
-      }
+        return true;
+      });
     }
 
-    // Game Loop
+    function spawnFallingObject() {
+      fallingObjects.push({
+        x: Math.random() * 390 + 5,
+        y: 0,
+        radius: 10
+      });
+    }
+
+    function startSpawning() {
+      if (gameOver) return;
+      spawnFallingObject();
+      setTimeout(startSpawning, spawnIntervalMs);
+    }
+
     function gameLoop() {
-      if(gameOver) return;
-
-      ctx.clearRect(0, 0, width, height);
-      drawBasket();
-      drawObjects();
-      updateObjects();
-
+      if (gameOver) return;
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      drawPlayer();
+      drawFallingObjects();
+      updateFallingObjects();
       requestAnimationFrame(gameLoop);
     }
 
-    // Controls - mouse & touch
-    document.addEventListener("mousemove", e => {
-      basket.x = e.clientX - basket.width / 2;
-      if(basket.x < 0) basket.x = 0;
-      if(basket.x + basket.width > width) basket.x = width - basket.width;
+    function gameOverHandler() {
+      gameOver = true;
+      document.getElementById("gameOver").style.display = "block";
+      document.getElementById("buttons").style.display = "block";
+    }
+
+    function restartGame() {
+      gameOver = false;
+      document.getElementById("gameOver").style.display = "none";
+      document.getElementById("buttons").style.display = "none";
+      score = 0;
+      fallingObjects = [];
+      document.title = "Catch Game";
+      fallSpeed = 2;
+      spawnIntervalMs = 2000;
+      startSpawning();
+      gameLoop();
+    }
+
+    document.addEventListener("mousemove", (e) => {
+      const rect = canvas.getBoundingClientRect();
+      player.x = e.clientX - rect.left - player.width / 2;
     });
-    document.addEventListener("touchmove", e => {
-      let touch = e.touches[0];
-      basket.x = touch.clientX - basket.width / 2;
-      if(basket.x < 0) basket.x = 0;
-      if(basket.x + basket.width > width) basket.x = width - basket.width;
-    }, {passive: false});
 
-    gameLoop();
-
+    restartGame();
   </script>
 </body>
 </html>
