--- a/index.html
+++ b/index.html
@@ -2,131 +2,120 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Catch Game</title>
+  <title>Catch the Emojis</title>
   <style>
-    body { margin: 0; overflow: hidden; background: #222; }
-    canvas { display: block; background: #000; margin: auto; }
-    #gameOver, #buttons {
+    body { margin: 0; overflow: hidden; font-family: sans-serif; }
+    canvas { background: #f0f0f0; display: block; margin: 0 auto; }
+    #scoreBoard {
       position: absolute;
-      top: 40%;
-      left: 50%;
-      transform: translateX(-50%);
-      text-align: center;
-      color: white;
-      font-size: 30px;
-      z-index: 20;
-    }
-    button {
-      margin: 10px;
-      padding: 10px 20px;
-      font-size: 18px;
-      cursor: pointer;
+      top: 10px;
+      left: 10px;
+      font-size: 24px;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
-  <canvas id="gameCanvas" width="400" height="600"></canvas>
-  <div id="gameOver" style="display:none;">Game Over</div>
-  <div id="buttons" style="display:none;">
-    <button onclick="restartGame()">🔁 Try Again</button>
-    <button onclick="window.location.href='https://t.me/earnwithtelegram_bot?start=watchagain'">📺 Watch Ad to Continue</button>
-  </div>
+<canvas id="gameCanvas" width="400" height="600"></canvas>
+<div id="scoreBoard">Score: 0</div>
 
-  <script>
-    const canvas = document.getElementById("gameCanvas");
-    const ctx = canvas.getContext("2d");
+<script>
+const canvas = document.getElementById("gameCanvas");
+const ctx = canvas.getContext("2d");
 
-    let player = { x: 175, y: 580, width: 50, height: 10 };
-    let fallingObjects = [];
-    let score = 0;
-    let fallSpeed = 2;
-    let spawnIntervalMs = 2000;
-    let gameOver = false;
+let basket = { x: 160, y: 550, width: 80, height: 20 };
+let objects = [];
+let objectSpeed = 2;
+let spawnInterval = 2000;
+let score = 0;
+let token = new URLSearchParams(window.location.search).get("token");
 
-    function drawPlayer() {
-      ctx.fillStyle = "lime";
-      ctx.fillRect(player.x, player.y, player.width, player.height);
+if (!token) {
+  alert("❌ Invalid or expired link.");
+  throw new Error("No token provided.");
+}
+
+function drawBasket() {
+  ctx.fillStyle = "#007bff";
+  ctx.fillRect(basket.x, basket.y, basket.width, basket.height);
+}
+
+function drawObjects() {
+  ctx.fillStyle = "green";
+  objects.forEach(obj => {
+    ctx.beginPath();
+    ctx.arc(obj.x, obj.y, obj.radius, 0, Math.PI * 2);
+    ctx.fill();
+  });
+}
+
+function spawnObject() {
+  const radius = 15;
+  const x = Math.random() * (canvas.width - radius * 2) + radius;
+  objects.push({ x: x, y: 0, radius: radius });
+}
+
+function updateObjects() {
+  for (let i = objects.length - 1; i >= 0; i--) {
+    objects[i].y += objectSpeed;
+    if (objects[i].y > canvas.height) {
+      objects.splice(i, 1); // missed
+      continue;
     }
+    if (
+      objects[i].y + objects[i].radius > basket.y &&
+      objects[i].x > basket.x &&
+      objects[i].x < basket.x + basket.width
+    ) {
+      score++;
+      document.getElementById("scoreBoard").innerText = `Score: ${score}`;
+      objects.splice(i, 1);
+    }
+  }
+}
 
-    function drawFallingObjects() {
-      ctx.fillStyle = "red";
-      fallingObjects.forEach(obj => {
-        ctx.beginPath();
-        ctx.arc(obj.x, obj.y, obj.radius, 0, Math.PI * 2);
-        ctx.fill();
+function draw() {
+  ctx.clearRect(0, 0, canvas.width, canvas.height);
+  drawBasket();
+  drawObjects();
+  updateObjects();
+  requestAnimationFrame(draw);
+}
+
+document.addEventListener("keydown", e => {
+  if (e.key === "ArrowLeft" && basket.x > 0) basket.x -= 20;
+  if (e.key === "ArrowRight" && basket.x + basket.width < canvas.width) basket.x += 20;
+});
+
+setInterval(spawnObject, spawnInterval);
+
+let speedTimer = 0;
+const speedBoost = setInterval(() => {
+  objectSpeed *= 2;
+  spawnInterval /= 2;
+  clearInterval(spawnObjectInterval);
+  spawnObjectInterval = setInterval(spawnObject, spawnInterval);
+  speedTimer += 30;
+  if (speedTimer >= 180) clearInterval(speedBoost); // Stop boost after 3 minutes if needed
+}, 30000);
+
+let spawnObjectInterval = setInterval(spawnObject, spawnInterval);
+
+window.addEventListener("beforeunload", async () => {
+  if (score > 0 && token) {
+    try {
+      await fetch("http://localhost:5000/submit_score", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ token: token, score: score })
       });
+    } catch (err) {
+      console.error("Score submit failed:", err);
     }
+  }
+});
 
-    function updateFallingObjects() {
-      fallingObjects.forEach(obj => obj.y += fallSpeed);
-      fallingObjects = fallingObjects.filter(obj => {
-        if (
-          obj.y + obj.radius > player.y &&
-          obj.x > player.x &&
-          obj.x < player.x + player.width
-        ) {
-          score++;
-          fallSpeed += 0.05;
-          spawnIntervalMs = Math.max(500, spawnIntervalMs - 20);
-          document.title = `Score: ${score}`;
-          return false;
-        }
-        if (obj.y > canvas.height) {
-          gameOverHandler();
-          return false;
-        }
-        return true;
-      });
-    }
-
-    function spawnFallingObject() {
-      fallingObjects.push({
-        x: Math.random() * 390 + 5,
-        y: 0,
-        radius: 10
-      });
-    }
-
-    function startSpawning() {
-      if (gameOver) return;
-      spawnFallingObject();
-      setTimeout(startSpawning, spawnIntervalMs);
-    }
-
-    function gameLoop() {
-      if (gameOver) return;
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      drawPlayer();
-      drawFallingObjects();
-      updateFallingObjects();
-      requestAnimationFrame(gameLoop);
-    }
-
-    function gameOverHandler() {
-      gameOver = true;
-      document.getElementById("gameOver").style.display = "block";
-      document.getElementById("buttons").style.display = "block";
-    }
-
-    function restartGame() {
-      gameOver = false;
-      document.getElementById("gameOver").style.display = "none";
-      document.getElementById("buttons").style.display = "none";
-      score = 0;
-      fallingObjects = [];
-      document.title = "Catch Game";
-      fallSpeed = 2;
-      spawnIntervalMs = 2000;
-      startSpawning();
-      gameLoop();
-    }
-
-    document.addEventListener("mousemove", (e) => {
-      const rect = canvas.getBoundingClientRect();
-      player.x = e.clientX - rect.left - player.width / 2;
-    });
-
-    restartGame();
-  </script>
+draw();
+</script>
 </body>
 </html>
